# TheAgentCompany

./: .gitignore  .openhands_instruction  BACKGROUND.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  Running_tasks.md  USERDOC.md  changes.diff  creating_NPCs.md  pyproject.toml
.github/: publish_task_images.sh  pull_request_template.md  validate_dependencies.py  validate_evaluators.sh  validate_task_structure.sh
.github/workflows/: benchmark-runner.yml  openhands-resolver.yml  task-release.yml  validate_task_images.yml
doc/: CONTRIBUTING.md  DEVELOPMENT.md  README.md  SETUP.md
docs/: CONTRIBUTING.md  DEVELOPMENT.md  EVALUATION.md  README.md  SETUP.md
evaluation/: README.md  browsing.py  run_eval parallel.sh  run_eval.py  run_eval.sh  run_eval_del.sh  run_eval_task.sh  summarise_results.py  summarise_results_v2.py
evaluation/reports/: multiplier-4bit-unsigned-pipelined-general-run-1  multiplier-4bit-unsigned-pipelined-general-run-2  template  uart-general-run-1  uart-general-run-2  vending-machine-fsm-general-run-1  vending-machine-fsm-general-run-2
reports/ieee-754-fpu-general/: MM_ieee-754-fpu-general  TB_ieee-754-fpu-general  TB_ieee-754-fpu-general_Checkpoints  deduction_reason
reports/multiplier-4bit-unsigned-pipelined-general/: TB_multiplier-4bit-unsigned-pipelined-general  functionality.txt
reports/task-template/: MM_task  TB_task
servers/: Makefile  README  README.md  docker-compose.yml  setup.bat  setup.sh
servers/api-server/: API_MAKEFILE  Dockerfile  Makefile  README.md  api-server.py  docker-compose.yml  plane_health_check.py  server.py  utils.py
servers/gitlab/: Dockerfile  README  README.md  custom_wrapper.sh  docker-compose.yml  init.sh
servers/nextcloud/: README  (+4 more)
workspaces/: Dockerfile  README.md  test_setup.py
workspaces/tasks/sde-debug-crashed-server/app/: README.md  pyproject.toml
workspaces/tasks/sde-debug-crashed-server/app/database/: events.parquet  participants.parquet  users.parquet
workspaces/tasks/sde-debug-crashed-server/app/event_viewer/: main.py  test_app.py
(+1216 files in other folders)
