[tool.poetry]
name = "TheAgentCompany"
version = "0.0.1"
description = "A benchmark for agents that could do professional jobs"
authors = ["The Agent Company"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/neulab/TheAgentCompany"
include = ["poetry.lock"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "*"
openhands-ai = { git = "https://github.com/All-Hands-AI/OpenHands.git", rev = "4dfc7a7ef01bcc78a974d8af12ec7f3a2bc9b097" }
