[tool.poetry]
name = "TheAgentCompany"
version = "1.0.0"
description = "A benchmark for agents that could do professional jobs"
authors = ["The Agent Company"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheAgentCompany/TheAgentCompany"
include = ["poetry.lock"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.evaluation.dependencies]
# only needed if you want to run the benchmark with OpenHands
pyyaml = "*"
openhands-ai = "0.14.2"

